--- a/data/interface/index.css
+++ b/data/interface/index.css
@@ -12,7 +12,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  font-size: 12px;
+  font-size: 13px;
   overflow: hidden;
   background-color: #fff;
   font-family: arial, sans-serif;
@@ -32,7 +32,7 @@ table tr td {
 
 input, label, table tr td {
   color: #333;
-  font-size: 12px;
+  font-size: 13px;
   font-family: arial, sans-serif;
 }
 
@@ -42,10 +42,10 @@ label {
   border: 0;
   padding: 0;
   width: auto;
-  height: 42px;
+  height: 48px;
   cursor: pointer;
   font-weight: 600;
-  line-height: 42px;
+  line-height: 48px;
   user-select: none;
   text-align: center;
   letter-spacing: 1px;
@@ -55,8 +55,8 @@ label {
 
 input[type='radio'], input[type='checkbox'] {
   margin-top: 13px;
-  margin: auto 10px;
   vertical-align: bottom;
+  margin: auto 0 auto 15px;
 }
 
 .container {
@@ -72,9 +72,9 @@ input[type='radio'], input[type='checkbox'] {
   width: 100%;
   height: 118px;
   background-repeat: no-repeat;
-  background-size: 42px !important;
+  background-size: 50px !important;
   background-position: center center;
-  background-image: url('../icons/84.png');
+  background-image: url('../icons/100.png');
   border-bottom: solid 1px rgba(0,0,0,0.05);
 }
 
@@ -129,14 +129,14 @@ input[type='radio'], input[type='checkbox'] {
 .option {
   padding: 0;
   margin: 5px;
-  height: 42px;
-  width: 150px;
+  height: 48px;
+  width: 168px;
   display: flex;
   flex-flow: row;
   cursor: pointer;
   overflow: hidden;
   user-select: none;
-  line-height: 42px;
+  line-height: 48px;
   text-align: center;
   align-items: center;
   white-space: nowrap;
@@ -158,8 +158,8 @@ input[type='radio'], input[type='checkbox'] {
   opacity: 1.00;
   cursor: default;
   margin-top: 5px;
-  max-width: 630px;
-  border-color: #b3b3b3;
+  max-width: 700px;
+  border-color: #999;
   background-color: #fff;
 }
 
@@ -176,7 +176,7 @@ input[type='radio'], input[type='checkbox'] {
   cursor: auto;
   outline: none;
   color: #0075ff;
-  font-size: 13px;
+  font-size: 14px;
   font-weight: 600;
   text-indent: 15px;
   background-color: #fff;
@@ -193,19 +193,19 @@ input[type='radio'], input[type='checkbox'] {
   color: #333;
   height: 38px;
   display: flex;
-  font-size: 12px;
+  font-size: 13px;
   user-select: none;
   line-height: 38px;
   flex-direction: row;
   text-transform: uppercase;
-  font-family: arial,sans-serif;
+  font-family: arial, sans-serif;
 }
 
 .title p {
   margin: 0;
   padding: 0;
   color: #555;
-  font-size: 11px;
+  font-size: 12px;
   overflow: hidden;
   font-weight: 600;
   white-space: nowrap;
@@ -213,7 +213,7 @@ input[type='radio'], input[type='checkbox'] {
   display: inline-block;
   vertical-align: middle;
   text-overflow: ellipsis;
-  font-family: arial,sans-serif;
+  font-family: arial, sans-serif;
 }
 
 .title:after {
@@ -269,7 +269,7 @@ input[type='radio'], input[type='checkbox'] {
   cursor: pointer;
   font-weight: 600;
   margin-top: 10px;
-  line-height: 48px;
+  line-height: 50px;
   user-select: none;
   text-align: center;
   letter-spacing: 1px;
@@ -298,7 +298,7 @@ input[type='radio'], input[type='checkbox'] {
   color: #333;
   float: right;
   height: 44px;
-  font-size: 13px;
+  font-size: 14px;
   padding: 0 15px;
   overflow: hidden;
   font-weight: 600;
@@ -365,7 +365,7 @@ input[type='radio'], input[type='checkbox'] {
   .status, .elapsed {
     font-size: 11px;
     font-weight: normal;
-    font-family: monaco, "andale mono", "lucida console", "courier new", monospace;
+    font-family: monaco, 'andale mono', 'lucida console", "courier new", monospace;
   }
 }
 
@@ -376,10 +376,10 @@ input[type='radio'], input[type='checkbox'] {
 }
 
 @keyframes blink {
-  0% {background-image: url('../icons/OFF/84.png')}
-  49% {background-image: url('../icons/OFF/84.png')}
-  51% {background-image: url('../icons/ON/84.png')}
-  100% {background-image: url('../icons/ON/84.png')}
+  0% {background-image: url('../icons/OFF/100.png')}
+  49% {background-image: url('../icons/OFF/100.png')}
+  51% {background-image: url('../icons/ON/100.png')}
+  100% {background-image: url('../icons/ON/100.png')}
 }
 
 @media (max-width: 600px) {
@@ -409,7 +409,7 @@ input[type='radio'], input[type='checkbox'] {
   }
 }
 
-html[context="webapp"] .extra,
-html[context="webapp"] .toolbar {
+html[context='webapp'] .extra,
+html[context='webapp'] .toolbar {
   display: none;
 }
