--- a/data/interface/index.css
+++ b/data/interface/index.css
@@ -152,6 +152,15 @@ input[type='radio'], input[type='checkbox'] {
   background-color: rgba(0,0,0,0.03);
 }
 
+.option:has([disabled]) {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.option:has([disabled]) label {
+  cursor: not-allowed;
+}
+
 .option:has(#filepath) {
   width: 100%;
   height: 48px;
@@ -363,7 +372,7 @@ input[type='radio'], input[type='checkbox'] {
 
 @-moz-document url-prefix() {
   .status, .elapsed {
-    font-size: 11px;
+    font-size: 14px;
     font-weight: normal;
     font-family: monaco, 'andale mono', 'lucida console", "courier new", monospace;
   }
